fix compilation on 7.x